<resources>
    <string name="app_name">Notes</string>
    <string name="title_activity_main_notes">MainNotesActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="action_settings">Settings</string>
    <string name="text_main_no_notes">Come on, add something!</string>
    <string name="edit">EDIT</string>
    <string name="close">CLOSE</string>
    <string name="delete">DELETE</string>
    <string name="save">SAVE</string>
    <string name="delete_all">Delete all notes</string>
    <string name="delete_all_sure">Delete all notes. Are you sure?</string>
    <string name="cancel">CANCEL</string>
    <string name="hint_name">Enter name</string>
    <string name="hint_body">Enter text</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
