<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    tools:context=".view.NoteFragment"
    android:background="@android:color/darker_gray"
    android:padding="8dp">

    <EditText
        android:id="@+id/et_fragment_name"
        style="@style/TextNoteName"
        android:maxLength="18"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        tools:text="Note1Note1Note1Note1Note1" />

    <EditText
        android:id="@+id/et_fragment_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_fragment_name"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:maxLines="16"
        android:textAlignment="viewStart"
        tools:text="lores ipslores ipsum lores ipsum lores ipsum lores ipsum lores ipsum lores ipsum lores ipsum lores ipsum lores ipsum lores ipsum lores ipsum lores ipsum lores ipsum lores ipsum lores ipsum lores ipsum lores ipsum lores ipsum lores ipsum lores ipsum lores ipsum lores ipsum lores ipsum lores ipsum lores ipsum lores ipsum lores ipsum lores ipsum lores ipsum lores ipsum lores ipsum lores ipsum um lores ipsum lores ipsum lores ipsum lores ipsum lores ipsum lores ipsum lores ipsum lores ipsum lores ipsum lores ipsum lores ipsum lores ipsum lores ipsum lores ipsum lores ipsum " />

    <ImageView
        android:layout_margin="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iv_new_picture"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_add_a_photo_black_24dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/et_fragment_body"
        android:padding="8dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/btn_save"
            android:layout_gravity="center"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:id="@+id/btn_delete"
            android:layout_gravity="center"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:id="@+id/btn_close"
            android:layout_gravity="center"/>

    </LinearLayout>
</RelativeLayout>